# stratosphere

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE.md  README.md  build.sh  circle.yml  package.yaml  stack-7.10.yaml  stack-9.0.yaml  stack-9.10.yaml  stack-9.12.yaml  stack-9.2.yaml  stack-9.4.yaml  stack-9.6.yaml  stack-9.8.yaml  stack-ghc-8-2.yaml  stack-ghc-8-4.yaml  stack-ghc-8-6.yaml  stack.yaml  stratosphere.cabal
.circleci/: config.yml
.github/workflows/: ci.yaml
ci/: setup-stack.sh
common/: package.yaml
examples/: api-gateway-lambda.hs  apigw-lambda-dynamodb.hs  apigw-lambda-s3.hs  auto-scaling-group.hs  ec2-with-eip.hs  package.yaml  rds-master-replica.hs  s3-copy.hs  simple-lambda.hs  stratosphere-examples.cabal
examples/app/: Main.hs
examples/test/: GoldenSpec.hs
examples/test_resources/: auto-scaling-group.json  rds-master-replica.json  s3-copy.json  simple-ec2.json  simple-lambda.json
generator/: package.yaml  stratosphere-generator.cabal
generator/model/: update-model-file.sh
golden-test/: golden-test.cabal  package.yaml
golden-test/test/: Spec.hs
library-gen/Stratosphere/: Resources.hs
manager/: README.md  package.yaml  stratosphere-manager.cabal
manager/app/: Main.hs
services/accessanalyzer/: package.yaml  stratosphere-accessanalyzer.cabal
services/acmpca/: package.yaml  stratosphere-acmpca.cabal
services/aiops/: package.yaml  stratosphere-aiops.cabal
services/amazonmq/: package.yaml  stratosphere-amazonmq.cabal
services/amplify/: package.yaml  stratosphere-amplify.cabal
services/amplifyuibuilder/: package.yaml  stratosphere-amplifyuibuilder.cabal
services/apigateway/: package.yaml  stratosphere-apigateway.cabal
services/apigatewayv2/: package.yaml  (+1 more)
src/: Stratosphere.hs
tests/: HLint.hs  Main.hs
(+3037 files in other folders)
