name:           stratosphere
version:        0.1.0
synopsis:       EDSL for AWS CloudFormation
description:    EDSL for AWS CloudFormation
category:       AWS, Cloud
homepage:       https://github.com/jdreaver/stratosphere
bug-reports:    https://github.com/jdreaver/stratosphere/issues
maintainer:     David Reaver
license:        MIT
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    CHANGELOG.md
    LICENSE.md
    README.md
    stack.yaml

source-repository head
  type: git
  location: https://github.com/jdreaver/stratosphere

library
  hs-source-dirs:
      library
  ghc-options: -Wall
  build-depends:
      base
    , aeson == 0.9.*
    , aeson-pretty >= 0.7
    , bytestring
    , lens >= 4.5
    , template-haskell >= 2.0
    , text >= 1.1
    , unordered-containers >= 0.2
  exposed-modules:
      Stratosphere
    , Stratosphere.Helpers
    , Stratosphere.Resources
    , Stratosphere.Resources.EC2.EIP
    , Stratosphere.Resources.EC2.EIPAssociation
    , Stratosphere.Resources.EC2.Instance
    , Stratosphere.Resources.EC2.VPC
    , Stratosphere.Template
    , Stratosphere.Values
  default-language: Haskell2010

test-suite stratosphere-test-suite
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      tests
  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      base
    , stratosphere
    , tasty
    , tasty-hspec
  default-language: Haskell2010

test-suite style
  type:             exitcode-stdio-1.0
  main-is:          HLint.hs
  build-depends:    base -any
                  , hlint ==1.*
  default-language: Haskell2010
  hs-source-dirs:   tests
  ghc-options:      -Wall -Werror